# igvc-software

gazebo/igvc_description/urdf/: Jaymii.urdf
igvc/: CMakeLists.txt
igvc/launch/: barrel_blocker.launch  gps.launch  mapper.launch  o_grid_mapper.launch
igvc/src/barrel_blocker/: CMakeLists.txt  main.cpp
igvc/src/cnn/: cnn.py
igvc/src/filter_lidar/: CMakeListNode.txt  CMakeLists.txt  node.cpp
igvc/src/global_mapper/: main.cpp
igvc/src/imu/: main.cpp
igvc/src/line_detector/: linedetector.cpp  linedetector.h
igvc/src/o_grid_mapper/: CMakeLists.txt  main.cpp
igvc/src/path_follower/: main.cpp
igvc/src/tests/: test_motor_controller.cpp
igvc_navigation/: CMakeLists.txt
igvc_navigation/cmake/: FindGperftools.cmake
igvc_navigation/include/UKF/: Integrator.h
igvc_navigation/include/igvc_navigation/: PriorityQueue.cpp  PriorityQueue.h
igvc_navigation/launch/: ekf.launch  ekf.yaml  field_d_planner.launch  localization.launch  madgwick.launch  madgwick.yaml  mapper.launch
igvc_navigation/src/ahrs/: CMakeLists.txt  ahrs.cpp  ahrs.h  main.cpp
igvc_navigation/src/ekf/: CMakeLists.txt  ekf.cpp  ekf.h
igvc_navigation/src/field_d_planner/: CMakeLists.txt  FieldDPlanner.cpp  main.cpp
igvc_navigation/src/madgwick/: CMakeLists.txt  madgwick_filter.cpp  madgwick_filter.h  madgwick_filter_node.cpp  madgwick_filter_node.h
igvc_navigation/src/particle_filter/: particle_filter.cpp  particle_filter.h  particle_filter_node.cpp
igvc_utils/scripts/: calibrate.py  correct_mag.py
sandbox/: waypoints.csv
